# backend

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 1b40d5775cd1_create_users_table.py  f674fb1e524a_adding_words_and_characters_tables.py
app/: app.py  server.py  state.py
app/api/: v1.py
app/api/dependencies/: database.py  search.py  user.py
app/api/v1/: api.py
app/api/v1/routes/: authentication.py  registration.py  sample.py  vocabulary.py
app/core/: exceptions.py  handlers.py  security.py
app/crud/: base.py  crud_character.py  crud_user.py  crud_word.py
app/db/: base.py  connections.py
app/db/crud/: base.py  character.py  user.py  word.py
app/db/models/: base.py  character.py  combined.py  user.py  word.py
app/domain/auth/: token.py  user.py
app/domain/vocabulary/: character.py  combined.py  common.py  word.py
app/features/auth/: __init__.py  routers.py
app/features/auth/dependencies/: authentication.py  registration.py  user.py
app/features/auth/logic/: authentication.py  registration.py  user.py
app/features/db/: __init__.py
app/features/db/dependencies/: sessions.py
app/features/vocabulary/: __init__.py  routers.py
app/features/vocabulary/dependencies/: search.py
app/features/vocabulary/logic/: search.py
app/middleware/: logger.py
app/models/: user.py  vocabulary.py
app/schemas/: __init__.py  user.py
app/settings/: base.py  core.py  db.py
app/settings/logging/: structlog.py  uvicorn.py
app/tasks/: shutdown.py  startup.py
requirements/: base.txt  dev.txt  testing.txt
tests/: conftest.py
tests/api/v1/routes/: test_authentication.py  test_registration.py  test_vocabulary.py
tests/core/: test_security.py
tests/crud/: conftest.py  test_crud_user.py
tests/fixtures/: data.py  vocabulary.py
tests/integration/db/crud/: test_crud_character.py  test_crud_user.py  test_crud_word.py
tests/integration/features/auth/: test_authentication.py
tests/integration/features/vocabulary/: test_vocabulary.py
tests/unit/core/: test_security.py
tests/unit/features/authentication/logic/: test_authentication_logic.py  test_registration_logic.py  test_user_logic.py
tests/unit/features/vocabulary/logic/: test_search_logic.py
