[tool.poetry]
name = "cnlearnapi"
version = "0.1.0"
description = ""
authors = ["Vlad Podgurschi"]
license = "GPL-3.0"
readme = "README.md"
packages = [
    { include = "app" },
    { include = "alembic" },
]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.10.2"
asyncpg = "^0.27.0"
bcrypt = "^4.0.1"
email-validator = "^1.3.1"
fastapi = "^0.95.0"
httpx = "^0.23.3"
passlib = "^1.7.4"
pydantic = {version = "^1.10.7", extras = ["dotenv"]}
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
python-multipart = "^0.0.6"
sqlalchemy = {version = "^2.0.8", extras = ["asyncio", "mypy"]}
uvicorn = "^0.21.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.2.1"
mypy = "^1.1.1"
mypy-extensions = "^1.0.0"
types-passlib = "^1.7.7.11"
types-python-jose = "^3.3.4.6"
isort = "^5.12.0"
ruff = "^0.0.261"
ipython = "^8.11.0"

[tool.poetry.group.test.dependencies]
asgi_lifespan = "^2.1.0"
pytest = "^7.2.2"
pytest_asyncio = "^0.21.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
dev = "app.server:development"
prod = "app.server:production"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=lcov:cov.info"

[tool.coverage.run]
omit = [
    "app/server.py",
]


[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
plugins = [
  "pydantic.mypy",
  "sqlalchemy.ext.mypy.plugin"
]
exclude = ['alembic', '.venv/']
strict = true

[tool.ruff]
line-length = 120
