[tool.poetry]
name = "cnlearnapi"
version = "0.1.0"
description = ""
authors = ["Vlad Podgurschi"]
license = "GPL-3.0"
readme = "README.md"
packages = [
    { include = "app" },
    { include = "alembic" },
]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
bcrypt = "^4.0.1"
email-validator = "^2.0.0-post.0"
fastapi = "^0.101.0"
httpx = "^0.24.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "^2.0.3"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.19"
uvicorn = "^0.23.1"
structlog = "^23.1.0"
orjson = "^3.9.2"
pydantic-settings = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pre-commit = "^3.2.1"
mypy = "^1.4.1"
mypy-extensions = "^1.0.0"
types-passlib = "^1.7.7.12"
types-python-jose = "^3.3.4.8"
isort = "^5.12.0"
ruff = "^0.0.285"
ipython = "^8.14.0"
rich = "^13.4.2"

[tool.poetry.group.test.dependencies]
asgi_lifespan = "^2.1.0"
pytest = "^7.4.0"
pytest_asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
dev = "app.server:development"
prod = "app.server:production"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=lcov:cov.info"

[tool.coverage.run]
omit = [
    "app/server.py",
    "app/settings/logging/*",
]


[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
plugins = [
  "pydantic.mypy",
  "sqlalchemy.ext.mypy.plugin"
]
exclude = ['alembic', '.venv/']
strict = true

[tool.ruff]
line-length = 120
