[tool.poetry]
name = "cnlearnapi"
version = "0.1.0"
description = ""
authors = ["Vlad Podgurschi"]
license = "GPL-3.0"
readme = "README.md"
packages = [
    { include = "app" },
    { include = "alembic" },
]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
bcrypt = "^4.1.2"
email-validator = "^2.1.0.post1"
fastapi = "^0.109.2"
httpx = "^0.26.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg = "^3.1.17"
pydantic = "^2.6.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
uvicorn = "^0.27.0.post1"
structlog = "^24.1.0"
orjson = "^3.9.12"
pydantic-settings = "^2.1.0"
jieba = "^0.42.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pre-commit = "^3.6.0"
mypy = "^1.8.0"
mypy-extensions = "^1.0.0"
types-passlib = "^1.7.7.20240106"
types-python-jose = "^3.3.4.20240106"
isort = "^5.13.2"
ruff = "^0.2.0"
ipython = "^8.21.0"
rich = "^13.7.0"
pyright = "^1.1.349"

[tool.poetry.group.test.dependencies]
asgi_lifespan = "^2.1.0"
pytest = "^7.4.3"
pytest_asyncio = "^0.23.2"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
dev = "app.server:development"
prod = "app.server:production"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
#addopts = "--cov=app --cov-report=term-missing"
addopts = "--cov=app --cov-report=lcov:cov.info"

[tool.coverage.run]
omit = [
    "app/server.py",
    "app/settings/logging/*",
]


[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
plugins = [
  "pydantic.mypy",
]
exclude = ['.venv/', 'alembic']
strict = true

[[tool.mypy.overrides]]
module = [
    "jieba",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
